--- a/Fi800ScanLibrary/Fi800ScanLibrary.csproj
+++ b/Fi800ScanLibrary/Fi800ScanLibrary.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Fi800ScanLibrary</RootNamespace>
     <AssemblyName>Fi800ScanLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -22,7 +22,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,33 +32,37 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AxInterop.FiScnLib">
-      <HintPath>..\..\..\..\00ProjectRepos\VCS 2012\obj\Debug\AxInterop.FiScnLib.dll</HintPath>
+    <Reference Include="AxInterop.FiScnLib, Version=9.17.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\00ProjectRepos\VCS 2012\bin\Debug\AxInterop.FiScnLib.dll</HintPath>
     </Reference>
-    <Reference Include="fiScanTest">
-      <HintPath>..\..\..\..\00ProjectRepos\VCS 2012\obj\Debug\fiScanTest.exe</HintPath>
-    </Reference>
-    <Reference Include="Interop.FiScnLib">
-      <HintPath>..\..\..\..\00ProjectRepos\VCS 2012\obj\Debug\Interop.FiScnLib.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+    <Reference Include="FiScnUtildN4x, Version=1.0.0.0, Culture=neutral, PublicKeyToken=930bc95bec9b7b0c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Common Files\Fujitsu\Scanner Control SDK\FiScnUtil\FiScnUtildN4x.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyInjection.cs" />
     <Compile Include="ModuleScan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScannerEvents\ScanEventsHandler.cs" />
     <Compile Include="Scanner\IScanDocument.cs" />
     <Compile Include="Scanner\ScanDocument.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
