--- a/GuestRegistration/Web.config
+++ b/GuestRegistration/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GuestRegistration-20230409011209.mdf;Initial Catalog=aspnet-GuestRegistration-20230409011209;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="GuestData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GuestData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
   <appSettings>
   </appSettings>
