FiScanner minimum working set up and Integrated

--- a/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
+++ b/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Web.Http.WebHost, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.9\lib\net45\System.Web.Http.WebHost.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,6 +78,12 @@
   <ItemGroup>
     <Compile Include="Api\APIHelper.cs" />
     <Compile Include="Api\IAPIHelper.cs" />
+    <Compile Include="FiScanner\FiScan.cs" />
+    <Compile Include="FiScanner\FiScanHelper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FiScanner\IFiScan.cs" />
+    <Compile Include="FiScanner\IFiScanHelper.cs" />
     <Compile Include="Models\AuthenticatedUser.cs" />
     <Compile Include="Models\ILoggedInUserModel.cs" />
     <Compile Include="Models\LoggedInUserModel.cs" />
@@ -85,6 +92,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="C:\Program Files %28x86%29\FiScnSDK23\Sample\ScanTest\VCS 2012\fiScanTest.csproj">
+      <Project>{995ECF12-C2DC-4F55-8598-2BB636B65305}</Project>
+      <Name>fiScanTest</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
