--- a/FI800Scan/fiScanTest.csproj
+++ b/FI800Scan/fiScanTest.csproj
@@ -163,6 +163,7 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="FileModel.cs" />
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
     </Compile>
