--- a/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
+++ b/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
@@ -105,6 +105,10 @@
       <Project>{995ECF12-C2DC-4F55-8598-2BB636B65305}</Project>
       <Name>fiScan</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IronOCR.Library\IronOCR.Library.csproj">
+      <Project>{D21BBB0A-CA79-4D71-8731-72DD9531A330}</Project>
+      <Name>IronOCR.Library</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tesseract.ConsoleDemo\Tesseract.OCRLibrary.csproj">
       <Project>{a50ec795-e457-4aaf-81ef-cd54880cffa3}</Project>
       <Name>Tesseract.OCRLibrary</Name>
