--- a/Tesseract.ConsoleDemo/Tesseract.OCRLibrary.csproj
+++ b/Tesseract.ConsoleDemo/Tesseract.OCRLibrary.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AForge.Imaging" Version="2.2.5" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 
