--- a/Tesseract.ConsoleDemo/Tesseract.OCRLibrary.csproj
+++ b/Tesseract.ConsoleDemo/Tesseract.OCRLibrary.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AForge.Imaging" Version="2.2.5" />
     <PackageReference Include="Emgu.CV" Version="4.7.0.5276" />
     <PackageReference Include="IronPython" Version="3.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Python.Runtime" Version="2.7.9" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
