--- a/GuestRegistrationDesktopUI.Library/ApplicationSettings.json
+++ b/GuestRegistrationDesktopUI.Library/ApplicationSettings.json
@@ -1,4 +1,9 @@
 {
   "ImageThreshold": "100",
-  "PyScriptSource": "D:\\Images\\ProcessedImage\\Testscript.py"
+  "PyScriptSource": "D:\\Images\\ProcessedImage\\Testscript.py",
+  "ScannedIDfolder": "D:\\Images\\",
+  "ScannedPhotofolder": "D:\\Images\\Photo\\",
+  "ProcessedImageFolder": "D:\\Images\\ProcessedImage\\",
+  "ScannedIDcounter": 0,
+  "PhotoCounter":  0
 }
