--- a/EDSDKLib/CanonEDSDKLib.csproj
+++ b/EDSDKLib/CanonEDSDKLib.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{15E99248-6161-46A4-9183-609CA62406A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EDSDKLib</RootNamespace>
-    <AssemblyName>EDSDKLib</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RootNamespace>CanonEDLibrary</RootNamespace>
+    <AssemblyName>CanonEDLibrary</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -28,7 +28,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>bin\Release\EDSDKLib.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\CanonEDLibrary.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -50,6 +50,7 @@
     <Compile Include="API\Helper\IO.cs" />
     <Compile Include="API\Helper\STAThread.cs" />
     <Compile Include="API\Helper\ValueCollections.cs" />
+    <Compile Include="CameraOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDK\SDKDelegates.cs" />
     <Compile Include="SDK\SDKEnums.cs" />
