--- a/GuestRegistrationDeskUI/GuestRegistrationDeskUI.csproj
+++ b/GuestRegistrationDeskUI/GuestRegistrationDeskUI.csproj
@@ -166,6 +166,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\CanonEDSDK\CanonED.Library.csproj">
+      <Project>{AC6B306C-AC16-43C4-8624-54A026A5B822}</Project>
+      <Name>CanonED.Library</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FI800Scan\fiScan.csproj">
       <Project>{995ecf12-c2dc-4f55-8598-2bb636b65305}</Project>
       <Name>fiScan</Name>
