--- a/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
+++ b/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Models\VisitorDataModel.cs" />
     <Compile Include="OCR\IOCRhelper.cs" />
     <Compile Include="OCR\OCRhelper.cs" />
+    <Compile Include="PhotoHandler\CameraOperations.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhotoHandler\ICanonSDKHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextProcessing\ProcessTextData.cs" />
   </ItemGroup>
@@ -103,6 +107,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CanonEDSDK\CanonED.Library.csproj">
+      <Project>{ac6b306c-ac16-43c4-8624-54a026a5b822}</Project>
+      <Name>CanonED.Library</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FI800Scan\fiScan.csproj">
       <Project>{995ECF12-C2DC-4F55-8598-2BB636B65305}</Project>
       <Name>fiScan</Name>
@@ -116,8 +124,6 @@
       <Name>Tesseract.OCRLibrary</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PhotoHandler\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
