Working copy after generate document integration

--- a/GenerateDocument.Library/GenerateDocument.Library.csproj
+++ b/GenerateDocument.Library/GenerateDocument.Library.csproj
@@ -4,8 +4,8 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0A345185-B9B3-48F4-AD32-AC68F20F14E7}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{A60FFA33-C667-47A9-8C96-2D0817B636D3}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GenerateDocument.Library</RootNamespace>
     <AssemblyName>GenerateDocument.Library</AssemblyName>
@@ -30,10 +30,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1004\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenerateDocument.cs" />
+    <Compile Include="GeneratePDFdocument.cs" />
+    <Compile Include="GenerateWordDocument.cs" />
+    <Compile Include="GuestDataModel.cs" />
+    <Compile Include="IGenerateWordDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
