--- a/Tesseract.ConsoleDemo/OCRconfig.json
+++ b/Tesseract.ConsoleDemo/OCRconfig.json
@@ -1,4 +1,4 @@
 {
   "ImageThreshold": "100",
-  "PyScriptSource": "D:\\Images\\ProcessedImage\\Testscript.py"
+  "PyScriptSource": "D:\\VisitorData\\ScannedID\\ProcessedImage\\Testscript.py"
 }
