--- a/GenerateDocument.Library/GenerateDocument.Library.csproj
+++ b/GenerateDocument.Library/GenerateDocument.Library.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeneratePDfContractDoc.cs" />
     <Compile Include="GeneratePDFdocument.cs" />
+    <Compile Include="GeneratePDFVisitorDoc.cs" />
     <Compile Include="GenerateWordDocument.cs" />
     <Compile Include="GuestDataModel.cs" />
     <Compile Include="IGeneratePDFdocument.cs" />
