--- a/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
+++ b/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="PhotoHandler\ICanonSDKHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextProcessing\CountryCode.cs" />
     <Compile Include="TextProcessing\ProcessTextData.cs" />
   </ItemGroup>
   <ItemGroup>
