--- a/GuestRegistrationDesktopUI.Library/packages.config
+++ b/GuestRegistrationDesktopUI.Library/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="NLog" version="5.2.3" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="7.0.0" targetFramework="net472" />
