--- a/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
+++ b/GuestRegistrationDesktopUI.Library/GuestRegistrationDesktopUI.Library.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextProcessing\CountryCode.cs" />
     <Compile Include="TextProcessing\Document.cs" />
+    <Compile Include="TextProcessing\MRZParsingLogic.cs" />
     <Compile Include="TextProcessing\Parser.cs" />
     <Compile Include="TextProcessing\ProcessTextData.cs" />
   </ItemGroup>
