--- a/FargoEncodingPrinting.Library/FargoEncodingPrinting.Library.csproj
+++ b/FargoEncodingPrinting.Library/FargoEncodingPrinting.Library.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AFDB8CB9-40FB-4500-BAE1-5FDB047B6297}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FargoEncodingPrinting.Library</RootNamespace>
     <AssemblyName>FargoEncodingPrinting.Library</AssemblyName>
@@ -29,6 +29,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FargoNetAPI">
