--- a/GuestRegistrationDeskUI/packages.config
+++ b/GuestRegistrationDeskUI/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Spire.PDF" version="9.9.3" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
 </packages>
