--- a/GuestRegistrationDesktopUI.Library/packages.config
+++ b/GuestRegistrationDesktopUI.Library/packages.config
@@ -7,6 +7,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="NLog" version="5.2.3" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Base" version="23.1.36" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="23.1.36" targetFramework="net472" />
+  <package id="Syncfusion.Pdf.Wpf" version="23.1.36" targetFramework="net472" />
+  <package id="Syncfusion.PdfToImageConverter.WPF" version="23.1.36" targetFramework="net472" />
+  <package id="Syncfusion.PdfViewer.WPF" version="23.1.36" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="23.1.36" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="7.0.0" targetFramework="net472" />
