--- a/GuestRegistrationDeskUI/packages.config
+++ b/GuestRegistrationDeskUI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Caliburn.Micro" version="4.0.212" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="4.0.212" targetFramework="net472" />
+  <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
