--- a/GuestRegistrationDesktopUI.Library/packages.config
+++ b/GuestRegistrationDesktopUI.Library/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
+  <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
