--- a/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
+++ b/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
@@ -46,6 +46,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCard.Designer.cs">
+      <DependentUpon>FormCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormContractor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormContractor.Designer.cs">
+      <DependentUpon>FormContractor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDoc.Designer.cs">
+      <DependentUpon>FormDoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormScan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormScan.Designer.cs">
+      <DependentUpon>FormScan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormVisitor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormVisitor.Designer.cs">
+      <DependentUpon>FormVisitor.cs</DependentUpon>
+    </Compile>
     <Compile Include="GuestRegisration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +90,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCard.resx">
+      <DependentUpon>FormCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormContractor.resx">
+      <DependentUpon>FormContractor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDoc.resx">
+      <DependentUpon>FormDoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormScan.resx">
+      <DependentUpon>FormScan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormVisitor.resx">
+      <DependentUpon>FormVisitor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GuestRegisration.resx">
       <DependentUpon>GuestRegisration.cs</DependentUpon>
     </EmbeddedResource>
