--- a/GuestDataManager.Library/GuestDataManager.Library.csproj
+++ b/GuestDataManager.Library/GuestDataManager.Library.csproj
@@ -63,6 +63,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\InsertData.cs" />
     <Compile Include="DataAccess\UserData.cs" />
     <Compile Include="Internal\DataAccess\SqlDataAccess.cs" />
     <Compile Include="Models\UserModel.cs" />
