--- a/GuestDataManager.Library/GuestDataManager.Library.csproj
+++ b/GuestDataManager.Library/GuestDataManager.Library.csproj
@@ -64,8 +64,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess\InsertData.cs" />
+    <Compile Include="DataAccess\RetriveCompanyName.cs" />
     <Compile Include="DataAccess\UserData.cs" />
     <Compile Include="Internal\DataAccess\SqlDataAccess.cs" />
+    <Compile Include="Models\CompanyNameList.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
